Docker/echo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
  namespace: fynbos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
      - name: http-echo
        image: hashicorp/http-echo
        args:
          - "-text=$(MESSAGE)"
        ports:
        - containerPort: 5678
