Docker/echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-echo-service
  namespace: fynbos
spec:
  selector:
    app: http-echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  type: NodePort
