Docker/deny-all-policy.yaml
# deny-all-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: fynbos
spec:
  podSelector: {}
  policyTypes:
    - Ingress
